--- a/.env
+++ b/.env
@@ -1,3 +1,6 @@
 PORT=8000
 DATABASE_URL="mongodb+srv://gfg:root@cluster0.qkwsv.mongodb.net/myFirstDatabase?retryWrites=true&w=majority"
 secret="gfgauth#12345"
+razorpay_key_id=rzp_test_zI1U3F5TlaEif4
+razor_pay_secret=TgxNqPmCFbvgrtXMY6TAwJPY
+
